# DSMidterm

./: CMakeLists.txt  main.cpp
Structs/: EquilateralTriangle.cpp  EquilateralTriangle.h  Line.cpp  Line.h  Point.cpp  Point.h  PointsComparator.cpp  Triangle.cpp  Triangle.h
files/: dirty_lines.csv  lines.csv  points.txt
